Completed theorem 4 bound calculation in dNDF

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -591,141 +591,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 0,\t Loss: 0.8961006989864078\n",
-      "Iteration: 1,\t Loss: 0.8960608571670065\n",
-      "Iteration: 2,\t Loss: 0.8959853018317202\n",
-      "Iteration: 3,\t Loss: 0.8958774344302098\n",
-      "Iteration: 4,\t Loss: 0.895740265622368\n",
-      "Iteration: 5,\t Loss: 0.8955769205178538\n",
-      "Iteration: 6,\t Loss: 0.8953895395837733\n",
-      "Iteration: 7,\t Loss: 0.8951807912925432\n",
-      "Iteration: 8,\t Loss: 0.8949523592266339\n",
-      "Iteration: 9,\t Loss: 0.8947062952444654\n",
-      "Iteration: 10,\t Loss: 0.8944440327962592\n",
-      "Iteration: 11,\t Loss: 0.8941669739760447\n",
-      "Iteration: 12,\t Loss: 0.8938767577845023\n",
-      "Iteration: 13,\t Loss: 0.8935743164328107\n",
-      "Iteration: 14,\t Loss: 0.8932606100244623\n",
-      "Iteration: 15,\t Loss: 0.8929366956108795\n",
-      "Iteration: 16,\t Loss: 0.8926034534803482\n",
-      "Iteration: 17,\t Loss: 0.8922616645469511\n",
-      "Iteration: 18,\t Loss: 0.891911861380063\n",
-      "Iteration: 19,\t Loss: 0.8915547515776944\n",
-      "Iteration: 20,\t Loss: 0.8911908229173781\n",
-      "Iteration: 21,\t Loss: 0.8908205422586715\n",
-      "Iteration: 22,\t Loss: 0.8904445984565436\n",
-      "Iteration: 23,\t Loss: 0.8900630440853579\n",
-      "Iteration: 24,\t Loss: 0.8896763668424659\n",
-      "Iteration: 25,\t Loss: 0.8892850528392352\n",
-      "Iteration: 26,\t Loss: 0.8888891103839324\n",
-      "Iteration: 27,\t Loss: 0.8884888565956025\n",
-      "Iteration: 28,\t Loss: 0.888084633440776\n",
-      "Iteration: 29,\t Loss: 0.8876766266461205\n",
-      "Iteration: 30,\t Loss: 0.8872650014067868\n",
-      "Iteration: 31,\t Loss: 0.8868497844557354\n",
-      "Iteration: 32,\t Loss: 0.8864311798238457\n",
-      "Iteration: 33,\t Loss: 0.8860094304058953\n",
-      "Iteration: 34,\t Loss: 0.8855846639640129\n",
-      "Iteration: 35,\t Loss: 0.8851568911309856\n",
-      "Iteration: 36,\t Loss: 0.8847261995447788\n",
-      "Iteration: 37,\t Loss: 0.8842925709499124\n",
-      "Iteration: 38,\t Loss: 0.883856279816379\n",
-      "Iteration: 39,\t Loss: 0.8834172945284748\n",
-      "Iteration: 40,\t Loss: 0.8829756220431397\n",
-      "Iteration: 41,\t Loss: 0.8825314208845563\n",
-      "Iteration: 42,\t Loss: 0.8820845684003956\n",
-      "Iteration: 43,\t Loss: 0.8816352653027629\n",
-      "Iteration: 44,\t Loss: 0.8811834603145025\n",
-      "Iteration: 45,\t Loss: 0.8807292321449397\n",
-      "Iteration: 46,\t Loss: 0.880272521072322\n",
-      "Iteration: 47,\t Loss: 0.8798134645250567\n",
-      "Iteration: 48,\t Loss: 0.8793519337133663\n",
-      "Iteration: 49,\t Loss: 0.8788881348718992\n",
-      "Iteration: 50,\t Loss: 0.878421766381083\n",
-      "Iteration: 51,\t Loss: 0.8779530990162429\n",
-      "Iteration: 52,\t Loss: 0.8774820993819928\n",
-      "Iteration: 53,\t Loss: 0.8770087770139522\n",
-      "Iteration: 54,\t Loss: 0.8765330221475691\n",
-      "Iteration: 55,\t Loss: 0.8760550185767114\n",
-      "Iteration: 56,\t Loss: 0.8755746654342015\n",
-      "Iteration: 57,\t Loss: 0.8750918200652879\n",
-      "Iteration: 58,\t Loss: 0.8746066119966972\n",
-      "Iteration: 59,\t Loss: 0.8741190536245044\n",
-      "Iteration: 60,\t Loss: 0.8736292677840618\n",
-      "Iteration: 61,\t Loss: 0.8731369756292731\n",
-      "Iteration: 62,\t Loss: 0.8726423417024171\n",
-      "Iteration: 63,\t Loss: 0.8721454126276846\n",
-      "Iteration: 64,\t Loss: 0.8716459364446905\n",
-      "Iteration: 65,\t Loss: 0.8711441050635788\n",
-      "Iteration: 66,\t Loss: 0.8706398458922677\n",
-      "Iteration: 67,\t Loss: 0.87013323899719\n",
-      "Iteration: 68,\t Loss: 0.8696240907248562\n",
-      "Iteration: 69,\t Loss: 0.8691126010382284\n",
-      "Iteration: 70,\t Loss: 0.8685986635054951\n",
-      "Iteration: 71,\t Loss: 0.8680821779321652\n",
-      "Iteration: 72,\t Loss: 0.8675632849486256\n",
-      "Iteration: 73,\t Loss: 0.8670419212883305\n",
-      "Iteration: 74,\t Loss: 0.8665180482026082\n",
-      "Iteration: 75,\t Loss: 0.8659916767288733\n",
-      "Iteration: 76,\t Loss: 0.8654628189757462\n",
-      "Iteration: 77,\t Loss: 0.8649313800210938\n",
-      "Iteration: 78,\t Loss: 0.8643975047965337\n",
-      "Iteration: 79,\t Loss: 0.8638610100753638\n",
-      "Iteration: 80,\t Loss: 0.8633219207358459\n",
-      "Iteration: 81,\t Loss: 0.8627803477012561\n",
-      "Iteration: 82,\t Loss: 0.8622363074031936\n",
-      "Iteration: 83,\t Loss: 0.86168948816025\n",
-      "Iteration: 84,\t Loss: 0.8611401493663781\n",
-      "Iteration: 85,\t Loss: 0.860588199687491\n",
-      "Iteration: 86,\t Loss: 0.860033678584354\n",
-      "Iteration: 87,\t Loss: 0.8594764106377969\n",
-      "Iteration: 88,\t Loss: 0.8589166215275434\n",
-      "Iteration: 89,\t Loss: 0.858354285505199\n",
-      "Iteration: 90,\t Loss: 0.8577891366483337\n",
-      "Iteration: 91,\t Loss: 0.8572213513588771\n",
-      "Iteration: 92,\t Loss: 0.8566509209992035\n",
-      "Iteration: 93,\t Loss: 0.8560778414315452\n",
-      "Iteration: 94,\t Loss: 0.8555019393079416\n",
-      "Iteration: 95,\t Loss: 0.854923492282641\n",
-      "Iteration: 96,\t Loss: 0.8543423259719058\n",
-      "Iteration: 97,\t Loss: 0.8537583531361731\n",
-      "Iteration: 98,\t Loss: 0.8531717183117851\n",
-      "Iteration: 99,\t Loss: 0.8525823863485171\n"
+      "Iteration: 0,\t Loss: 7.179305398798768\n",
+      "Iteration: 1,\t Loss: 7.175806330616396\n",
+      "Iteration: 2,\t Loss: 7.1691346817083925\n",
+      "Iteration: 3,\t Loss: 7.159561080686371\n",
+      "Iteration: 4,\t Loss: 7.1473115672042375\n",
+      "Iteration: 5,\t Loss: 7.132577468783711\n",
+      "Iteration: 6,\t Loss: 7.1155201580165155\n",
+      "Iteration: 7,\t Loss: 7.096268109358897\n",
+      "Iteration: 8,\t Loss: 7.074938125656178\n",
+      "Iteration: 9,\t Loss: 7.051624144468582\n",
+      "Iteration: 10,\t Loss: 7.026401345738715\n",
+      "Iteration: 11,\t Loss: 6.99933622445835\n",
+      "Iteration: 12,\t Loss: 6.970486961712528\n",
+      "Iteration: 13,\t Loss: 6.9398945096320706\n",
+      "Iteration: 14,\t Loss: 6.907601770532688\n",
+      "Iteration: 15,\t Loss: 6.873641292004048\n",
+      "Iteration: 16,\t Loss: 6.838044428282892\n",
+      "Iteration: 17,\t Loss: 6.800837024124917\n",
+      "Iteration: 18,\t Loss: 6.762046493495845\n",
+      "Iteration: 19,\t Loss: 6.721703112804063\n",
+      "Iteration: 20,\t Loss: 6.679832523427158\n",
+      "Iteration: 21,\t Loss: 6.636470830695725\n",
+      "Iteration: 22,\t Loss: 6.591655031272936\n",
+      "Iteration: 23,\t Loss: 6.545430346890178\n",
+      "Iteration: 24,\t Loss: 6.497853791148488\n",
+      "Iteration: 25,\t Loss: 6.448983179349295\n",
+      "Iteration: 26,\t Loss: 6.398895103598169\n",
+      "Iteration: 27,\t Loss: 6.347676709718268\n",
+      "Iteration: 28,\t Loss: 6.295428469042346\n",
+      "Iteration: 29,\t Loss: 6.242264344334032\n",
+      "Iteration: 30,\t Loss: 6.188320279160654\n",
+      "Iteration: 31,\t Loss: 6.1337398000678665\n",
+      "Iteration: 32,\t Loss: 6.078684626045256\n",
+      "Iteration: 33,\t Loss: 6.023333962018096\n",
+      "Iteration: 34,\t Loss: 5.967875592773051\n",
+      "Iteration: 35,\t Loss: 5.912510555797148\n",
+      "Iteration: 36,\t Loss: 5.857448783385518\n",
+      "Iteration: 37,\t Loss: 5.802904144671626\n",
+      "Iteration: 38,\t Loss: 5.749087177971019\n",
+      "Iteration: 39,\t Loss: 5.6962079761844056\n",
+      "Iteration: 40,\t Loss: 5.644471618463066\n",
+      "Iteration: 41,\t Loss: 5.594066005754154\n",
+      "Iteration: 42,\t Loss: 5.54516036131931\n",
+      "Iteration: 43,\t Loss: 5.497912050735435\n",
+      "Iteration: 44,\t Loss: 5.452446322757661\n",
+      "Iteration: 45,\t Loss: 5.408871754066466\n",
+      "Iteration: 46,\t Loss: 5.367267801757912\n",
+      "Iteration: 47,\t Loss: 5.327686853660502\n",
+      "Iteration: 48,\t Loss: 5.290158204569746\n",
+      "Iteration: 49,\t Loss: 5.254687374929041\n",
+      "Iteration: 50,\t Loss: 5.221257663171013\n",
+      "Iteration: 51,\t Loss: 5.189836363723963\n",
+      "Iteration: 52,\t Loss: 5.160369615777425\n",
+      "Iteration: 53,\t Loss: 5.132793386803923\n",
+      "Iteration: 54,\t Loss: 5.107032805236493\n",
+      "Iteration: 55,\t Loss: 5.083004115942991\n",
+      "Iteration: 56,\t Loss: 5.060617880074476\n",
+      "Iteration: 57,\t Loss: 5.039783559260723\n",
+      "Iteration: 58,\t Loss: 5.020407852689494\n",
+      "Iteration: 59,\t Loss: 5.00239556605101\n",
+      "Iteration: 60,\t Loss: 4.985657623576814\n",
+      "Iteration: 61,\t Loss: 4.97010297185053\n",
+      "Iteration: 62,\t Loss: 4.955646420398168\n",
+      "Iteration: 63,\t Loss: 4.942210044718584\n",
+      "Iteration: 64,\t Loss: 4.929711899277374\n",
+      "Iteration: 65,\t Loss: 4.918081873798414\n",
+      "Iteration: 66,\t Loss: 4.907250779328178\n",
+      "Iteration: 67,\t Loss: 4.897158037411977\n",
+      "Iteration: 68,\t Loss: 4.887742415298124\n",
+      "Iteration: 69,\t Loss: 4.878950634457688\n",
+      "Iteration: 70,\t Loss: 4.870731846701669\n",
+      "Iteration: 71,\t Loss: 4.863040375789283\n",
+      "Iteration: 72,\t Loss: 4.85583557797341\n",
+      "Iteration: 73,\t Loss: 4.849076157535678\n",
+      "Iteration: 74,\t Loss: 4.842727824009453\n",
+      "Iteration: 75,\t Loss: 4.836756785554693\n",
+      "Iteration: 76,\t Loss: 4.83113770495565\n",
+      "Iteration: 77,\t Loss: 4.825838657671026\n",
+      "Iteration: 78,\t Loss: 4.820837174052124\n",
+      "Iteration: 79,\t Loss: 4.816109240346474\n",
+      "Iteration: 80,\t Loss: 4.811636369430683\n",
+      "Iteration: 81,\t Loss: 4.807398434404686\n",
+      "Iteration: 82,\t Loss: 4.803378698815527\n",
+      "Iteration: 83,\t Loss: 4.7995591670052855\n",
+      "Iteration: 84,\t Loss: 4.7959301658441635\n",
+      "Iteration: 85,\t Loss: 4.792473719360463\n",
+      "Iteration: 86,\t Loss: 4.789181664292853\n",
+      "Iteration: 87,\t Loss: 4.7860405094979255\n",
+      "Iteration: 88,\t Loss: 4.783040681055092\n",
+      "Iteration: 89,\t Loss: 4.780173019357767\n",
+      "Iteration: 90,\t Loss: 4.777430369904366\n",
+      "Iteration: 91,\t Loss: 4.774804233289185\n",
+      "Iteration: 92,\t Loss: 4.772284850413779\n",
+      "Iteration: 93,\t Loss: 4.769869865368482\n",
+      "Iteration: 94,\t Loss: 4.767550788343968\n",
+      "Iteration: 95,\t Loss: 4.76532183647642\n",
+      "Iteration: 96,\t Loss: 4.763177262488032\n",
+      "Iteration: 97,\t Loss: 4.7611150115296255\n",
+      "Iteration: 98,\t Loss: 4.759129367489376\n",
+      "Iteration: 99,\t Loss: 4.757213813167763\n"
      ]
     }
    ],
    "source": [
-    "posterior_Qv , posterior_rho = mvb.optimize_rho('Lambda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "emp_tnd_rv=[1.0326651926065336, 1.078167413452801, 1.0312196001968343]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmvb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmv_tandem_risk\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Multi-View-Majority-Vote-Learning-Algorithms-Direct-Minimization-of-PAC-Bayesian-Bounds/mvpb/dNDF.py:410\u001b[0m, in \u001b[0;36mMultiViewBoundsDeepNeuralDecisionForests.mv_tandem_risk\u001b[0;34m(self, labeled_data, incl_oob)\u001b[0m\n\u001b[1;32m    406\u001b[0m     emp_tnd_rv\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39maverage(np\u001b[38;5;241m.\u001b[39maverage(rv\u001b[38;5;241m/\u001b[39mn2, weights\u001b[38;5;241m=\u001b[39mqv, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), \n\u001b[1;32m    407\u001b[0m                                  weights\u001b[38;5;241m=\u001b[39mqv))\n\u001b[1;32m    409\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00memp_tnd_rv\u001b[38;5;132;01m=}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 410\u001b[0m emp_mv_tnd_risk \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maverage\u001b[49m\u001b[43m(\u001b[49m\u001b[43memp_tnd_rv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mposterior_rho\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m    411\u001b[0m \u001b[38;5;66;03m# print(f\"{emp_mv_tnd_risk=}\")\u001b[39;00m\n\u001b[1;32m    412\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(emp_tnd_rv), emp_mv_tnd_risk, np\u001b[38;5;241m.\u001b[39mmin(n2)\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/numpy/lib/function_base.py:540\u001b[0m, in \u001b[0;36maverage\u001b[0;34m(a, axis, weights, returned, keepdims)\u001b[0m\n\u001b[1;32m    537\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m wgt\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    538\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    539\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1D weights expected when shapes of a and weights differ.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 540\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m wgt\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[1;32m    541\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    542\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of weights not compatible with specified axis.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    544\u001b[0m \u001b[38;5;66;03m# setup wgt to broadcast along axis\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "mvb.mv_tandem_risk()"
+    "posterior_Qv , posterior_rho = mvb.optimize_rho('TND')"
    ]
   },
   {
@@ -736,10 +706,33 @@
     {
      "data": {
       "text/plain": [
-       "0.16000000000000003"
+       "(array([0.74064456, 0.49109924, 0.66099695, 0.28726407, 0.72633212,\n",
+       "        0.86187777]),\n",
+       " 0.0945646005844038,\n",
+       " 178.0)"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mvb.mv_tandem_risk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42000000000000004"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,36 +744,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.posterior_rho=tensor([0.1537, 0.1496, 0.1604, 0.2218, 0.1695, 0.1449]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
-      "KL_rhopi=tensor(0.0107),  KL_QP=tensor(0.0013)\n",
-      "len(emp_rv)=6\n",
-      "0.48270838101348457 tensor(0.0107)\n"
+      "self.posterior_rho=tensor([0.0092, 0.0244, 0.0090, 0.9420, 0.0083, 0.0071]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
+      "KL_rhopi=tensor(2.0260),  KL_QP=tensor(0.0970)\n"
      ]
     }
    ],
    "source": [
-    "lamb_bound, lamb_views = mvb.bound(bound=\"Lambda\")"
+    "lamb_bound, lamb_views = mvb.bound(bound=\"TND\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.0, [1.0, 1.0, 1.0, 0.8932343921151265, 1.0, 1.0])"
+       "(1.0, [1.0, 1.0, 1.0, 1.0, 1.0, 1.0])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,32 +782,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.posterior_rho=tensor([0.1537, 0.1496, 0.1604, 0.2218, 0.1695, 0.1449]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
-      "KL_rhopi=tensor(0.0107),  KL_QP=tensor(0.0013)\n",
-      "len(emp_rv)=6\n",
-      "empirical_gibbs_risk=0.48270838101348457, right_hand_side=tensor(0.0137)\n"
+      "self.posterior_rho=tensor([0.0073, 0.0218, 0.0068, 0.9439, 0.0102, 0.0100]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
+      "KL_rhopi=tensor(2.0397),  KL_QP=tensor(0.0014)\n",
+      "len(emp_rv)=6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1.1303020506965373,\n",
-       " [1.2293559737839155,\n",
-       "  1.2510526512864808,\n",
-       "  1.171988637760185,\n",
-       "  0.8333695602588967,\n",
-       "  1.1176942348792616,\n",
-       "  1.3065048439789029])"
+       "(1.0854702312784439,\n",
+       " [1.7977170927578487,\n",
+       "  1.4219816433125103,\n",
+       "  1.8253453317948358,\n",
+       "  1.0262293666270264,\n",
+       "  1.7028249649815994,\n",
+       "  1.770332677328597])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
