Unlabeled data support in the desagreement

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -591,111 +591,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 0,\t Loss: 7.179305398798768\n",
-      "Iteration: 1,\t Loss: 7.175806330616396\n",
-      "Iteration: 2,\t Loss: 7.1691346817083925\n",
-      "Iteration: 3,\t Loss: 7.159561080686371\n",
-      "Iteration: 4,\t Loss: 7.1473115672042375\n",
-      "Iteration: 5,\t Loss: 7.132577468783711\n",
-      "Iteration: 6,\t Loss: 7.1155201580165155\n",
-      "Iteration: 7,\t Loss: 7.096268109358897\n",
-      "Iteration: 8,\t Loss: 7.074938125656178\n",
-      "Iteration: 9,\t Loss: 7.051624144468582\n",
-      "Iteration: 10,\t Loss: 7.026401345738715\n",
-      "Iteration: 11,\t Loss: 6.99933622445835\n",
-      "Iteration: 12,\t Loss: 6.970486961712528\n",
-      "Iteration: 13,\t Loss: 6.9398945096320706\n",
-      "Iteration: 14,\t Loss: 6.907601770532688\n",
-      "Iteration: 15,\t Loss: 6.873641292004048\n",
-      "Iteration: 16,\t Loss: 6.838044428282892\n",
-      "Iteration: 17,\t Loss: 6.800837024124917\n",
-      "Iteration: 18,\t Loss: 6.762046493495845\n",
-      "Iteration: 19,\t Loss: 6.721703112804063\n",
-      "Iteration: 20,\t Loss: 6.679832523427158\n",
-      "Iteration: 21,\t Loss: 6.636470830695725\n",
-      "Iteration: 22,\t Loss: 6.591655031272936\n",
-      "Iteration: 23,\t Loss: 6.545430346890178\n",
-      "Iteration: 24,\t Loss: 6.497853791148488\n",
-      "Iteration: 25,\t Loss: 6.448983179349295\n",
-      "Iteration: 26,\t Loss: 6.398895103598169\n",
-      "Iteration: 27,\t Loss: 6.347676709718268\n",
-      "Iteration: 28,\t Loss: 6.295428469042346\n",
-      "Iteration: 29,\t Loss: 6.242264344334032\n",
-      "Iteration: 30,\t Loss: 6.188320279160654\n",
-      "Iteration: 31,\t Loss: 6.1337398000678665\n",
-      "Iteration: 32,\t Loss: 6.078684626045256\n",
-      "Iteration: 33,\t Loss: 6.023333962018096\n",
-      "Iteration: 34,\t Loss: 5.967875592773051\n",
-      "Iteration: 35,\t Loss: 5.912510555797148\n",
-      "Iteration: 36,\t Loss: 5.857448783385518\n",
-      "Iteration: 37,\t Loss: 5.802904144671626\n",
-      "Iteration: 38,\t Loss: 5.749087177971019\n",
-      "Iteration: 39,\t Loss: 5.6962079761844056\n",
-      "Iteration: 40,\t Loss: 5.644471618463066\n",
-      "Iteration: 41,\t Loss: 5.594066005754154\n",
-      "Iteration: 42,\t Loss: 5.54516036131931\n",
-      "Iteration: 43,\t Loss: 5.497912050735435\n",
-      "Iteration: 44,\t Loss: 5.452446322757661\n",
-      "Iteration: 45,\t Loss: 5.408871754066466\n",
-      "Iteration: 46,\t Loss: 5.367267801757912\n",
-      "Iteration: 47,\t Loss: 5.327686853660502\n",
-      "Iteration: 48,\t Loss: 5.290158204569746\n",
-      "Iteration: 49,\t Loss: 5.254687374929041\n",
-      "Iteration: 50,\t Loss: 5.221257663171013\n",
-      "Iteration: 51,\t Loss: 5.189836363723963\n",
-      "Iteration: 52,\t Loss: 5.160369615777425\n",
-      "Iteration: 53,\t Loss: 5.132793386803923\n",
-      "Iteration: 54,\t Loss: 5.107032805236493\n",
-      "Iteration: 55,\t Loss: 5.083004115942991\n",
-      "Iteration: 56,\t Loss: 5.060617880074476\n",
-      "Iteration: 57,\t Loss: 5.039783559260723\n",
-      "Iteration: 58,\t Loss: 5.020407852689494\n",
-      "Iteration: 59,\t Loss: 5.00239556605101\n",
-      "Iteration: 60,\t Loss: 4.985657623576814\n",
-      "Iteration: 61,\t Loss: 4.97010297185053\n",
-      "Iteration: 62,\t Loss: 4.955646420398168\n",
-      "Iteration: 63,\t Loss: 4.942210044718584\n",
-      "Iteration: 64,\t Loss: 4.929711899277374\n",
-      "Iteration: 65,\t Loss: 4.918081873798414\n",
-      "Iteration: 66,\t Loss: 4.907250779328178\n",
-      "Iteration: 67,\t Loss: 4.897158037411977\n",
-      "Iteration: 68,\t Loss: 4.887742415298124\n",
-      "Iteration: 69,\t Loss: 4.878950634457688\n",
-      "Iteration: 70,\t Loss: 4.870731846701669\n",
-      "Iteration: 71,\t Loss: 4.863040375789283\n",
-      "Iteration: 72,\t Loss: 4.85583557797341\n",
-      "Iteration: 73,\t Loss: 4.849076157535678\n",
-      "Iteration: 74,\t Loss: 4.842727824009453\n",
-      "Iteration: 75,\t Loss: 4.836756785554693\n",
-      "Iteration: 76,\t Loss: 4.83113770495565\n",
-      "Iteration: 77,\t Loss: 4.825838657671026\n",
-      "Iteration: 78,\t Loss: 4.820837174052124\n",
-      "Iteration: 79,\t Loss: 4.816109240346474\n",
-      "Iteration: 80,\t Loss: 4.811636369430683\n",
-      "Iteration: 81,\t Loss: 4.807398434404686\n",
-      "Iteration: 82,\t Loss: 4.803378698815527\n",
-      "Iteration: 83,\t Loss: 4.7995591670052855\n",
-      "Iteration: 84,\t Loss: 4.7959301658441635\n",
-      "Iteration: 85,\t Loss: 4.792473719360463\n",
-      "Iteration: 86,\t Loss: 4.789181664292853\n",
-      "Iteration: 87,\t Loss: 4.7860405094979255\n",
-      "Iteration: 88,\t Loss: 4.783040681055092\n",
-      "Iteration: 89,\t Loss: 4.780173019357767\n",
-      "Iteration: 90,\t Loss: 4.777430369904366\n",
-      "Iteration: 91,\t Loss: 4.774804233289185\n",
-      "Iteration: 92,\t Loss: 4.772284850413779\n",
-      "Iteration: 93,\t Loss: 4.769869865368482\n",
-      "Iteration: 94,\t Loss: 4.767550788343968\n",
-      "Iteration: 95,\t Loss: 4.76532183647642\n",
-      "Iteration: 96,\t Loss: 4.763177262488032\n",
-      "Iteration: 97,\t Loss: 4.7611150115296255\n",
-      "Iteration: 98,\t Loss: 4.759129367489376\n",
-      "Iteration: 99,\t Loss: 4.757213813167763\n"
+      "Iteration: 0,\t Loss: 3.3923104596291167\n",
+      "Iteration: 1,\t Loss: 3.391657193561021\n",
+      "Iteration: 2,\t Loss: 3.39041646925649\n",
+      "Iteration: 3,\t Loss: 3.388645773306904\n",
+      "Iteration: 4,\t Loss: 3.386398041915726\n",
+      "Iteration: 5,\t Loss: 3.3837200461851236\n",
+      "Iteration: 6,\t Loss: 3.380654908970559\n",
+      "Iteration: 7,\t Loss: 3.377238777545021\n",
+      "Iteration: 8,\t Loss: 3.373507791360955\n",
+      "Iteration: 9,\t Loss: 3.369490981561252\n",
+      "Iteration: 10,\t Loss: 3.3652168428074614\n",
+      "Iteration: 11,\t Loss: 3.3607100218594783\n",
+      "Iteration: 12,\t Loss: 3.3559928190870223\n",
+      "Iteration: 13,\t Loss: 3.35108563502967\n",
+      "Iteration: 14,\t Loss: 3.3460057299759423\n",
+      "Iteration: 15,\t Loss: 3.340770182895422\n",
+      "Iteration: 16,\t Loss: 3.3353937277814687\n",
+      "Iteration: 17,\t Loss: 3.329889335605235\n",
+      "Iteration: 18,\t Loss: 3.324268689216435\n",
+      "Iteration: 19,\t Loss: 3.3185430365000803\n",
+      "Iteration: 20,\t Loss: 3.312721788518111\n",
+      "Iteration: 21,\t Loss: 3.306814326217494\n",
+      "Iteration: 22,\t Loss: 3.3008272997610923\n",
+      "Iteration: 23,\t Loss: 3.2947682356756633\n",
+      "Iteration: 24,\t Loss: 3.2886438879986013\n",
+      "Iteration: 25,\t Loss: 3.2824601954643455\n",
+      "Iteration: 26,\t Loss: 3.2762224561882713\n",
+      "Iteration: 27,\t Loss: 3.269934258617581\n",
+      "Iteration: 28,\t Loss: 3.2636009905744965\n",
+      "Iteration: 29,\t Loss: 3.2572265034657684\n",
+      "Iteration: 30,\t Loss: 3.250814106194156\n",
+      "Iteration: 31,\t Loss: 3.2443673506284005\n",
+      "Iteration: 32,\t Loss: 3.2378884983024836\n",
+      "Iteration: 33,\t Loss: 3.2313815167008295\n",
+      "Iteration: 34,\t Loss: 3.2248477268973446\n",
+      "Iteration: 35,\t Loss: 3.218288856842639\n",
+      "Iteration: 36,\t Loss: 3.211709391420211\n",
+      "Iteration: 37,\t Loss: 3.205109730924947\n",
+      "Iteration: 38,\t Loss: 3.198491099984161\n",
+      "Iteration: 39,\t Loss: 3.191856507002708\n",
+      "Iteration: 40,\t Loss: 3.185206769096178\n",
+      "Iteration: 41,\t Loss: 3.1785446625991667\n",
+      "Iteration: 42,\t Loss: 3.171869952273168\n",
+      "Iteration: 43,\t Loss: 3.1651851444397305\n",
+      "Iteration: 44,\t Loss: 3.158490116821718\n",
+      "Iteration: 45,\t Loss: 3.1517876495116894\n",
+      "Iteration: 46,\t Loss: 3.145079741666369\n",
+      "Iteration: 47,\t Loss: 3.1383657456560465\n",
+      "Iteration: 48,\t Loss: 3.1316477932912514\n",
+      "Iteration: 49,\t Loss: 3.1249266794894455\n",
+      "Iteration: 50,\t Loss: 3.1182043997756264\n",
+      "Iteration: 51,\t Loss: 3.111481358525511\n",
+      "Iteration: 52,\t Loss: 3.1047585098223136\n",
+      "Iteration: 53,\t Loss: 3.0980375707273797\n",
+      "Iteration: 54,\t Loss: 3.091320126106864\n",
+      "Iteration: 55,\t Loss: 3.084606858513982\n",
+      "Iteration: 56,\t Loss: 3.077898964313397\n",
+      "Iteration: 57,\t Loss: 3.0711965998421413\n",
+      "Iteration: 58,\t Loss: 3.0645031817590374\n",
+      "Iteration: 59,\t Loss: 3.0578191200168354\n",
+      "Iteration: 60,\t Loss: 3.0511446932502695\n",
+      "Iteration: 61,\t Loss: 3.044481884496947\n",
+      "Iteration: 62,\t Loss: 3.03783280452737\n",
+      "Iteration: 63,\t Loss: 3.0311974605879572\n",
+      "Iteration: 64,\t Loss: 3.02457768910826\n",
+      "Iteration: 65,\t Loss: 3.017976262696344\n",
+      "Iteration: 66,\t Loss: 3.0113914815374194\n",
+      "Iteration: 67,\t Loss: 3.0048271395604846\n",
+      "Iteration: 68,\t Loss: 2.998284162307379\n",
+      "Iteration: 69,\t Loss: 2.9917639915981606\n",
+      "Iteration: 70,\t Loss: 2.9852674118515727\n",
+      "Iteration: 71,\t Loss: 2.9787971644642006\n",
+      "Iteration: 72,\t Loss: 2.9723537592971816\n",
+      "Iteration: 73,\t Loss: 2.965939163430013\n",
+      "Iteration: 74,\t Loss: 2.959555179787938\n",
+      "Iteration: 75,\t Loss: 2.953202455792785\n",
+      "Iteration: 76,\t Loss: 2.9468830624305635\n",
+      "Iteration: 77,\t Loss: 2.940599999185575\n",
+      "Iteration: 78,\t Loss: 2.9343525642326673\n",
+      "Iteration: 79,\t Loss: 2.9281432292361336\n",
+      "Iteration: 80,\t Loss: 2.921973251457625\n",
+      "Iteration: 81,\t Loss: 2.9158448397250654\n",
+      "Iteration: 82,\t Loss: 2.909759239723888\n",
+      "Iteration: 83,\t Loss: 2.903718907413425\n",
+      "Iteration: 84,\t Loss: 2.8977244528372026\n",
+      "Iteration: 85,\t Loss: 2.8917768447600523\n",
+      "Iteration: 86,\t Loss: 2.8858787857034756\n",
+      "Iteration: 87,\t Loss: 2.880031119184265\n",
+      "Iteration: 88,\t Loss: 2.8742348371685793\n",
+      "Iteration: 89,\t Loss: 2.868493282771312\n",
+      "Iteration: 90,\t Loss: 2.8628062230423215\n",
+      "Iteration: 91,\t Loss: 2.8571758125195137\n",
+      "Iteration: 92,\t Loss: 2.8516017135233485\n",
+      "Iteration: 93,\t Loss: 2.8460873658355403\n",
+      "Iteration: 94,\t Loss: 2.840633074067992\n",
+      "Iteration: 95,\t Loss: 2.835240310434309\n",
+      "Iteration: 96,\t Loss: 2.8299090868854684\n",
+      "Iteration: 97,\t Loss: 2.8246419655261183\n",
+      "Iteration: 98,\t Loss: 2.8194398501257005\n",
+      "Iteration: 99,\t Loss: 2.814302513729899\n"
      ]
     }
    ],
    "source": [
-    "posterior_Qv , posterior_rho = mvb.optimize_rho('TND')"
+    "posterior_Qv , posterior_rho = mvb.optimize_rho('TND', unlabeled_data=Xs_test)"
    ]
   },
   {
@@ -706,9 +706,9 @@
     {
      "data": {
       "text/plain": [
-       "(array([0.74064456, 0.49109924, 0.66099695, 0.28726407, 0.72633212,\n",
-       "        0.86187777]),\n",
-       " 0.0945646005844038,\n",
+       "(array([0.77821328, 0.45158646, 0.77792066, 0.39585682, 0.66807003,\n",
+       "        0.83230567]),\n",
+       " 0.24332873788445253,\n",
        " 178.0)"
       ]
      },
@@ -729,7 +729,7 @@
     {
      "data": {
       "text/plain": [
-       "0.42000000000000004"
+       "0.45999999999999996"
       ]
      },
      "execution_count": 8,
@@ -751,18 +751,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.posterior_rho=tensor([0.0092, 0.0244, 0.0090, 0.9420, 0.0083, 0.0071]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
-      "KL_rhopi=tensor(2.0260),  KL_QP=tensor(0.0970)\n"
+      "self.posterior_rho=tensor([0.0390, 0.1793, 0.0784, 0.5870, 0.0500, 0.0663]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
+      "KL_rhopi=tensor(0.4999),  KL_QP=tensor(0.0029)\n"
      ]
     }
    ],
    "source": [
-    "lamb_bound, lamb_views = mvb.bound(bound=\"TND\")"
+    "lamb_bound, lamb_views = mvb.bound(bound=\"TND\", unlabeled_data=Xs_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "(1.0, [1.0, 1.0, 1.0, 1.0, 1.0, 1.0])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,31 +782,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.posterior_rho=tensor([0.0073, 0.0218, 0.0068, 0.9439, 0.0102, 0.0100]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
-      "KL_rhopi=tensor(2.0397),  KL_QP=tensor(0.0014)\n",
-      "len(emp_rv)=6\n"
+      "self.posterior_rho=tensor([0.0390, 0.1793, 0.0784, 0.5870, 0.0500, 0.0663]),  prior_pi=tensor([0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667])\n",
+      "KL_rhopi=tensor(0.4999),  KL_QP=tensor(0.0029)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1.0854702312784439,\n",
-       " [1.7977170927578487,\n",
-       "  1.4219816433125103,\n",
-       "  1.8253453317948358,\n",
-       "  1.0262293666270264,\n",
-       "  1.7028249649815994,\n",
-       "  1.770332677328597])"
+       "(1.3602543965089613,\n",
+       " [1.841217498272926,\n",
+       "  1.3644833404701457,\n",
+       "  1.7845165888890517,\n",
+       "  1.1613902839631476,\n",
+       "  1.7150574128507574,\n",
+       "  1.8502197858934608])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
