Added NUS-WIDE-OBJECT dataset

--- a/data/dataset.ipynb
+++ b/data/dataset.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -807,29 +807,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nus_features_files_path = os.listdir(\"./NUS-WIDE-OBJECT/low level features\")\n",
+    "nus_features_files_path.sort()\n",
+    "nus_labels_files_path = os.listdir(\"./NUS-WIDE-OBJECT/ground truth\")\n",
+    "nus_labels_files_path.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   0, ...,   0,   0, 114],\n",
-       "       [  0,   0,   0, ...,   0,   0,  12],\n",
-       "       [  0,   0,   0, ...,   0, 130, 253],\n",
-       "       ...,\n",
-       "       [  0,   0,   0, ...,  16, 254, 253],\n",
-       "       [  0,   0,   0, ..., 123, 253, 221],\n",
-       "       [  0,   0,   0, ...,   0, 112, 253]])"
+       "62"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(nus_labels_files_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set, test_set = {}, {}\n",
+    "y_train, y_test = [], []\n",
+    "\n",
+    "for file in  nus_features_files_path:\n",
+    "    view = file.split('_')[1].split('.')[0]\n",
+    "    with open(f\"./NUS-WIDE-OBJECT/low level features/{file}\", 'r') as f:\n",
+    "        data = []\n",
+    "        for line in f.readlines():\n",
+    "            data.append([float(x) for x in line.split()])\n",
+    "        if 'Train' in file:\n",
+    "            train_set[view] = np.array(data)\n",
+    "        else:\n",
+    "            test_set[view] = np.array(data)\n",
+    "\n",
+    "for file in nus_labels_files_path:\n",
+    "    with open(f\"./NUS-WIDE-OBJECT/ground truth/{file}\", 'r') as f:\n",
+    "        data = []\n",
+    "        for line in f.readlines():\n",
+    "            data.append(int(line))\n",
+    "        if 'Train' in file:\n",
+    "            y_train.append(data)\n",
+    "        else:\n",
+    "            y_test.append(data)\n",
+    "\n",
+    "y_train = np.array(y_train).transpose()\n",
+    "y_test = np.array(y_test).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CH (17928, 65)\n",
+      "CM55 (17928, 226)\n",
+      "CORR (17928, 145)\n",
+      "EDH (17928, 74)\n",
+      "WT (17928, 129)\n",
+      "y_train.shape=(17928, 31)  y_test.shape=(12072, 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in train_set.items():\n",
+    "    print(k, v.shape)\n",
+    "print(f\"{y_train.shape=}  {y_test.shape=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y_train\u001b[38;5;241m.\u001b[39msum(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m==\u001b[39m np\u001b[38;5;241m.\u001b[39mones(y_train\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]))\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert np.all(y_train.sum(axis=1) == np.ones(y_train.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planeTrain.txt\n",
+      "sunTrain.txt\n",
+      "vehicleTrain.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "j =  0\n",
+    "for i, f in enumerate(nus_labels_files_path):\n",
+    "    if \"Train\" in f:\n",
+    "        if y_train[200, j] == 1:\n",
+    "            print(f)\n",
+    "        j += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([13, 28]),)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(y_train.sum(axis=0) > 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[:, 28].sum() > 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17928, 2)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[:, np.where(y_train.sum(axis=0) > 2000)[0]].shape"
+   ]
   },
   {
    "cell_type": "code",
